1. Add Post create/update form. \n 2. all pyc files removed

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,8 +1,13 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'blog/base.html' %} {% block content %}
 
 <div class="container">
   <div class="row">
     <div class="col-md-8 card mb-4  mt-3 left  top">
+      {% if user.is_authenticated %}
+        <a class="text-right" href="{% url 'post_edit' pk=post.pk %}">
+          <span class="glyphicon glyphicon-pencil">Edit Post</span>
+        </a>
+      {% endif %}
       <div class="card-body">
         <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
         <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
